# Python0

./: 8.py  A_faire  Readme  yield.py
ex00/: Hello.py
ex01/: format_ft_time.py
ex01/ex02/: find_ft_type.py
ex02/: find_ft_type.py
ex03/: NULL_not_found.py
ex03/DOC/: 5 type de NULL
ex04/:  whatis.py
ex05/: building.py
ex06/:  filterstring.py   ft_filter.py
ex07/: sos.py
ex08/: Loading.py
ex09/ft_package/: count_in_list.py  pyproject.toml
exos/: 6.py  7.py  8.2.py  calculs.py  cleaner.py  config.py  formateur.py  key.py  lambda.py  list.py  log.txt  main.py  notes.txt  spe_attrib.py  strftime.py  sum.py  try.py  type.py
training/ex00/: Hello.py
training/ex01/: format_ft_time.py
training/ex02/: find_ft_type.py  tester.py
training/ex03/: NULL_not_found.py
training/ex04/: whatis.py
training/ex05/: building.py
training/ex06/: a.out  filterstring.py  ft_filter.py
training/ex07/: sos.py
training/ex08/: Loading.py
