[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ft_package"
version = "0.0.1"
authors = [{name = "eagle", email = "eagle@42.fr"}]
description = "A sample test package"
readme = "README.md"
license = {text = "MIT"}
urls = {Homepage = "https://github.com/eagle/ft_package"}